// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-version should handle non-existent document 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "errors": [
      {
        "$.documentId": [
          "The value 'non-existent-id' is not valid.",
        ],
      },
    ],
    "status": 400,
    "title": "One or more validation errors occurred.",
    "traceId": "normalized-trace-id",
    "type": "https://tools.ietf.org/html/rfc9110#section-15.5.1",
  },
}
`;

exports[`get-document-version should handle pagination with skip and take 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "document": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "documentType": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "id": "00000000-0000-0000-0000-000000000000",
        "isCurrentDraftVersion": false,
        "isCurrentPublishedVersion": true,
        "preventCleanup": false,
        "user": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "versionDate": "NORMALIZED_DATE",
      },
    ],
    "total": 2,
  },
}
`;

exports[`get-document-version should list document versions with pagination 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "document": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "documentType": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "id": "00000000-0000-0000-0000-000000000000",
        "isCurrentDraftVersion": true,
        "isCurrentPublishedVersion": false,
        "preventCleanup": false,
        "user": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "versionDate": "NORMALIZED_DATE",
      },
      {
        "document": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "documentType": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "id": "00000000-0000-0000-0000-000000000000",
        "isCurrentDraftVersion": false,
        "isCurrentPublishedVersion": true,
        "preventCleanup": false,
        "user": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "versionDate": "NORMALIZED_DATE",
      },
    ],
    "total": 2,
  },
}
`;
